fix style, gaps and alter nutrish look

--- a/css/makemepretty.css
+++ b/css/makemepretty.css
@@ -115,9 +115,25 @@ h1 {
     font-size: 1em;
 }
 
+.problem-box h1 {
+    font-family: Nunito,sans-serif!important;
+    color: #8bc441;
+    font-size: 1em;
+    padding-left: 10%;
+    font-weight: 700;
+    margin-top: 2em;
+}
+
+.problem-box h2 {
+    font-weight: bold;
+    font-size: .9em;
+    padding-left: 10%;
+    margin: 0;
+}
+
 .problem-box h3 {
     color: #8bc441;
-    padding: .2em 0;
+    padding: 0 0 .2em 0;
     font-size: 2em;
     padding-left: 10%;
 }
@@ -470,7 +486,6 @@ audio:focus {
     font-size: 16px;
     border-radius: 5px;
     margin-bottom: 1em;
-    margin-right: 1em;
 }
 
 .linked:hover {
@@ -817,6 +832,16 @@ audio:focus {
     -webkit-box-sizing: border-box;
     box-shadow: 0px 0px 6px #5e5e5e;
     background: #ffffff;
+    padding-bottom: 3em;
+    position: relative;
+}
+
+.blue-border {
+    border: solid #28c3c5;
+}
+
+.blue-border .nutrish-style {
+    background: #28c3c5;
 }
 
 #corn,
@@ -895,12 +920,56 @@ audio:focus {
     font-family: 'Nunito', sans-serif !important;
 }
 
+#nutrish .fifty-right li {
+    padding: 0;
+}
+
+#nutrish .fifty-right h3 {
+    font-weight: bold;
+    margin-left: 5%;
+}
+
+#nutrish .text-align-center {
+    margin-left: 0;
+    padding: 0;
+}
+
 .nutrish-style {
     margin-top: 2em;
     padding-bottom: 2em;
     background-color: #8cc363;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
 }
+
+.nutrish-splash, .nutrish-splash-two {
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.25), rgba(255, 255, 255, 0.25)),url("../images/nutrish-splash.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-position: center;
+}
+
+.nutrish-splash-two {
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.25), rgba(255, 255, 255, 0.25)),url("../images/nutrish-splash-two.jpg");
+}
+
+.nutrish-green-divider {
+ width: 100%;
+ height: 2em;
+ background-color: #8cc363;
+}
+
+.nutrish-blue-divider {
+    width: 100%;
+    height: 2em;
+    background-color: #28c3c5;
+   }
 
 /*iconography page*/
 
@@ -918,6 +987,10 @@ audio:focus {
 .text-align-center{
     text-align: center !important;
     margin: 0 !important;
+}
+
+.text-align-center small {
+    margin-left: 0;
 }
 
 .flex-process-container{
@@ -998,6 +1071,20 @@ audio:focus {
     width: 80%;
 }
 
+.project-tags {
+    margin-left: 5%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.project-tags small {
+    margin-right: 10px;
+    padding: 2px 4px;
+    margin-bottom: 10px;
+    margin-left: 0;
+}
+
 /*svg fills*/
 .fill-18BE98 {
     fill: #18BE98;
@@ -1043,9 +1130,8 @@ audio:focus {
     }
 
     .problem-box {
-        width: 42.5%;
+        width: 41%;
         float: left;
-        margin-right: 4%;
     }
 
     .home-hero {
@@ -1123,6 +1209,10 @@ audio:focus {
         line-height: 1.75em;
     }
 
+    .project-tags {
+        margin-left: 10%;
+    }
+
     small {
         margin-left: 10%;
     }
@@ -1137,9 +1227,8 @@ audio:focus {
     }
 
     .problem-box {
-        width: 42.5%;
+        width: 41%;
         float: left;
-        margin-right: 4%;
     }
 }
 
@@ -1196,6 +1285,10 @@ audio:focus {
         line-height: 1.75em;
     }
 
+    .project-tags {
+        margin-left: 10%;
+    }
+
     small {
         margin-left: 10%;
     }
@@ -1229,9 +1322,8 @@ audio:focus {
     }
 
     .problem-box {
-        width: 42.5%;
+        width: 41%;
         float: left;
-        margin-right: 4%;
     }
 
     .hundred-ninety,
@@ -1322,6 +1414,7 @@ audio:focus {
     .problem-box li,
     .grey-bg h2,
     .grey-bg p,
+    .grey-bg li,
     .white-bg h2,
     .white-bg p,
     .about-dark h2 {
